# statsd-c

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  statsd-c.spec.in
redhat/: config  statsd-c
src/: config.h.in  counters.h  gauges.h  queue.c  queue.h  serialize.c  serialize.h  stats.h  statsd.c  statsd.h  statsd_client.c  strings.c  strings.h  timers.h
src/embeddedgmetric/: embeddedgmetric.c  embeddedgmetric.h
src/json-c/: arraylist.c  debug.c  json_object.c  json_object.h  json_tokener.c  json_util.c  printbuf.c  urldecode.c  urldecode.h
src/uthash/: utarray.h  utstring.h
